feat(llm): add openai integration for natural language search extraction
- Add OPENAI_API_KEY to environment configs
- Implement LLMService for extracting search requests from natural language
- Add new chat endpoints for natural language search
- Enhance logging in geocoding and places services

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,8 @@ BACKEND_BEARER=change_me_strong_token
 GMAPS_SERVER_KEY=Axxxx
 GMAPS_EMBED_KEY=Axxxx
 
+# OpenAI API (for LLM chat extraction)
+OPENAI_API_KEY=sk-xxxx
+
 # CORS
 FRONTEND_ORIGIN=http://localhost:5173
