--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - GMAPS_SERVER_KEY=${GMAPS_SERVER_KEY}
       - GMAPS_EMBED_KEY=${GMAPS_EMBED_KEY}
       - FRONTEND_ORIGIN=http://localhost:${FRONTEND_PORT}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     ports:
       - "${BACKEND_PORT}:8000"
     restart: unless-stopped
