--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,6 +12,7 @@ services:
       - BACKEND_BEARER=${BACKEND_BEARER}
       - GMAPS_SERVER_KEY=${GMAPS_SERVER_KEY}
       - GMAPS_EMBED_KEY=${GMAPS_EMBED_KEY}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     ports:
       - "${BACKEND_PORT}:8000"
 
