refactor(frontend): replace custom API service with BaseHttp implementation
feat(frontend): add SWR for data fetching and global state management
refactor(frontend): simplify chat interface and remove unused components
refactor(backend): remove geocoding and places services, simplify chat endpoint
chore: update environment variables and docker configurations

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,6 @@
 # Backend API Configuration
-VITE_API_BASE_URL=http://localhost:8000
+VITE_BACKEND_URL=http://localhost:8000
+VITE_BACKEND_BEARER=change_me_strong_token
 
 # Google Maps API Configuration
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyDQfjluVFtpRHG5VrnFuSdnRsIJfYDS9XI
