--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,17 +17,16 @@ services:
       - "${BACKEND_PORT}:8000"
 
   frontend:
-    # dev server Vite (gantikan nginx image build)
+    # dev server Vite
     image: node:20-alpine
     working_dir: /app
     command: sh -c "npm ci && npm run dev -- --host 0.0.0.0 --port ${FRONTEND_PORT}"
     volumes:
       - ./frontend:/app
     environment:
-      - VITE_API_BASE=http://localhost:${BACKEND_PORT}
+      - VITE_BACKEND_URL=http://localhost:${BACKEND_PORT}
       - VITE_BACKEND_BEARER=${BACKEND_BEARER}
-      # vite di Mac kadang perlu polling
-      - CHOKIDAR_USEPOLLING=true
+      - CHOKIDAR_USEPOLLING=true # vite in Mac sometimes requires pooling
     ports:
       - "${FRONTEND_PORT}:${FRONTEND_PORT}"
     depends_on:
@@ -43,7 +42,6 @@ services:
     ports:
       - "3000:8080"
     restart: unless-stopped
-    # biasanya tak perlu reload, tapi kalau mau custom plugin lokal:
     volumes:
       - openwebui_data:/app/backend/data
 
