--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,4 @@
 services:
-  ollama:
-    image: ollama/ollama:0.3.14
-    platform: linux/arm64 # for Mac Apple Silicon (M1/M2/M3),
-    ports:
-      - "${OLLAMA_PORT}:11434"
-    volumes:
-      - ollama_models:/root/.ollama
-    restart: unless-stopped
-
-  open-webui:
-    image: ghcr.io/open-webui/open-webui:main
-    container_name: open-webui
-    environment:
-      - OLLAMA_BASE_URL=http://ollama:11434
-    depends_on:
-      - ollama
-    ports:
-      - "3000:8080"
-    restart: unless-stopped
-
   backend:
     build:
       context: .
@@ -42,12 +22,32 @@ services:
       dockerfile: frontend/Dockerfile
     container_name: frontend
     environment:
-      - VITE_API_BASE=http://backend:8000
+      - VITE_BACKEND_URL=http://localhost:8000
       - VITE_BACKEND_BEARER=${BACKEND_BEARER}
     depends_on:
       - backend
     ports:
       - "${FRONTEND_PORT}:80"
+    restart: unless-stopped
+
+  open-webui:
+    image: ghcr.io/open-webui/open-webui:main
+    container_name: open-webui
+    environment:
+      - OLLAMA_BASE_URL=http://ollama:11434
+    depends_on:
+      - ollama
+    ports:
+      - "3000:8080"
+    restart: unless-stopped
+
+  ollama:
+    image: ollama/ollama:0.3.14
+    platform: linux/arm64 # for Mac Apple Silicon (M1/M2/M3),
+    ports:
+      - "${OLLAMA_PORT}:11434"
+    volumes:
+      - ollama_models:/root/.ollama
     restart: unless-stopped
 
 volumes:
