--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@googlemaps/js-api-loader": "^1.16.10",
     "axios": "^1.11.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "swr": "^2.3.6",
+    "swr-global-state": "^2.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
