docs: translate UI and comments from Indonesian to English
Update UI text, error messages, and comments across frontend and backend to use English instead of Indonesian for better international accessibility. Also translate environment variable comments and system prompts.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - ./backend:/app
     environment:
-      # force polling di Mac/VM biar reload stabil
+      # force polling on Mac/VM for stable reload
       - WATCHFILES_FORCE_POLLING=true
       - FRONTEND_ORIGIN=http://localhost:${FRONTEND_PORT}
       - BACKEND_BEARER=${BACKEND_BEARER}
