--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ BACKEND_PORT=8000
 FRONTEND_PORT=5173
 OLLAMA_PORT=11434
 
-# auth untuk backend
+# auth for backend
 BACKEND_BEARER=change_me_strong_token
 
 # Google
