refactor(config): centralize environment variables and config management
- Move all environment variables to a centralized Config class
- Replace direct os.getenv calls with config references
- Update related docker and env files to match new variable names
- Improve type safety with proper type hints

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ GMAPS_SERVER_KEY=Axxxx
 GMAPS_EMBED_KEY=Axxxx
 
 # OpenAI API (for LLM chat extraction)
-OPENAI_API_KEY=sk-xxxx
+CLOUD_LLM_API_KEY=sk-xxxx
 
 # CORS
 FRONTEND_ORIGIN=http://localhost:5173
