feat: add dummy auth with rate limiting

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,9 @@ BACKEND_PORT=8000
 FRONTEND_PORT=5173
 OLLAMA_PORT=11434
 
-# auth for backend
-BACKEND_BEARER=change_me_strong_token
+# dummy auth for backend
+DUMMY_BYPASS_UNAME=admin
+DUMMY_BYPASS_PASSWORD=password
 
 # Google
 GMAPS_SERVER_KEY=Axxxx
